--- a/Work/InvestMint/InvestMint.html
+++ b/Work/InvestMint/InvestMint.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <base href="./" />
+    <base href="/" />
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./utilities.css">
     <link rel="icon" href="./Assets/Images/gaurav-logo.svg" type="image/x-icon">
