--- a/Work/InvestMint/InvestMint.html
+++ b/Work/InvestMint/InvestMint.html
@@ -15,7 +15,7 @@
     <nav-bar></nav-bar>
 
     <main>
-        <div class="under-construction">Sorry, this page is under construction.</div>
+        <div class="under-construction">Sorry.</div>
     </main>
 
     <footer-content></footer-content>
