--- a/index.html
+++ b/index.html
@@ -196,10 +196,7 @@
                             <p>Coordinator at United for Literacy</p>
                         </div>
                     </div>
-                    <p>Congratulations and very well done to our young team leader, innovator, and designer. <br><br>
-
-                        This year the Flying High School Magazine is going to be a Magazine with a difference. Proud of
-                        you!
+                    <p>(Awaiting Response)
                     </p>
                 </div>
             </div>
@@ -231,9 +228,8 @@
         </section>
 
         <!-- Other Work -->
-        <section class="other-work container">
+        <!-- <section class="other-work container">
             <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay fade">
-            <!-- <h1 class="watermark">Other Work</h1> -->
             <h2>Other Work</h2>
             <div class="cards">
                 <div class="card work">
@@ -270,7 +266,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer-content></footer-content>
