--- a/Work/InvestMint/InvestMint.html
+++ b/Work/InvestMint/InvestMint.html
@@ -37,7 +37,7 @@
                 evident through the presence of <b>₹</b> symbols and Indian news headlines throughout our project.</p>
             <h3>Process</h3>
             <p>While I stuck to the overarching principles of the double diamond process, I tailored and adapted my approach to align with the specific business requirements and time constraints of the competition.</p>
-            <h3>//ADD PROCESS DIAGRAM</h3>
+            <!-- <h3>//ADD PROCESS DIAGRAM</h3> -->
 
             <h2>Problem Validation</h2>
             <p>I undertook problem validation through two distinct stages: extensive news research and conducting a
