--- a/Work/InvestMint/InvestMint.html
+++ b/Work/InvestMint/InvestMint.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N86RSZZ');</script>
+<!-- End Google Tag Manager -->
     <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/utilities.css">
     <link rel="icon" href="/Assets/Images/gaurav-logo.svg" type="image/x-icon">
@@ -12,6 +19,10 @@
 </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N86RSZZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!-- Customize Path -->
     <nav-bar></nav-bar>
     <header>
@@ -30,8 +41,8 @@
             <p>Ever since I was a high school student, finance has captivated me. I thrive on analyzing markets and
                 constructing robust portfolios through qualitative and quantitative methods. Yet, I've observed a
                 puzzling trend among my college friends who, despite their interest in personal finance, shy away from
-                investing. This has piqued my curiosity and led me to wonder, "What is the reason behind the
-                disconnect between young people and investing?”</p>
+                investing. This has piqued my curiosity and led me to wonder, <b>"What is the reason behind the
+                disconnect between young people and investing?”</b></p>
             <p> During the Young Tycoons Business Competition, where I led as the CEO and managed UX and Marketing for
                 our team, we tackled this very issue. As students of Indian descent, our focus was on the Indian market,
                 evident through the presence of <b>₹</b> symbols and Indian news headlines throughout our project.</p>
