--- a/Work/UWMA/UWMA.html
+++ b/Work/UWMA/UWMA.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-N86RSZZ');</script>
+    <!-- End Google Tag Manager -->
     <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/utilities.css">
     <link rel="icon" href="/Assets/Images/gaurav-logo.svg" type="image/x-icon">
@@ -12,6 +22,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N86RSZZ" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- Customize Path -->
     <nav-bar></nav-bar>
     <header>
@@ -138,14 +152,23 @@
 
             <h2>Key Takeaways</h2>
             <h3>🤩 Full creative control is really rewarding</h3>
-            <p>Having done a lot of design work in the past, I was confident about my abilities going into this project, however throughout the course of the term I learnt more that I thought possible. I had the chance to work with so many skilled people and learn a lot. I performed a lot of research to make sure I did this project right and I feel like it paid off. </p>
-            <p>For example, while choosing accent colours led to me down a rabbit hole to learn about accessibility and how black and white may actually cause some accessibility issues.</p>
+            <p>Having done a lot of design work in the past, I was confident about my abilities going into this project,
+                however throughout the course of the term I learnt more that I thought possible. I had the chance to
+                work with so many skilled people and learn a lot. I performed a lot of research to make sure I did this
+                project right and I feel like it paid off. </p>
+            <p>For example, while choosing accent colours led to me down a rabbit hole to learn about accessibility and
+                how black and white may actually cause some accessibility issues.</p>
 
             <h3>🖼️ It’s a lot more than a logo</h3>
-            <p>While I saw examples of brand books in the past, creating one was a very different experience. The sheer number of considerations was beyond my expectations. Distilling a brand identity goes way beyond a logo. It was really fun thinking strategically about a colour scheme, typography, etc.</p>
+            <p>While I saw examples of brand books in the past, creating one was a very different experience. The sheer
+                number of considerations was beyond my expectations. Distilling a brand identity goes way beyond a logo.
+                It was really fun thinking strategically about a colour scheme, typography, etc.</p>
 
             <h3>👁️ Everyone has a different interpretation</h3>
-            <p>While the brand book can provide a general guideline, every designer is going to have a different interpretation of how to use the guides. For example, the design team began using the subheading font more in the Instagram posts. It is important to leave room for creativity as long as their is a cohesive identity.</p>
+            <p>While the brand book can provide a general guideline, every designer is going to have a different
+                interpretation of how to use the guides. For example, the design team began using the subheading font
+                more in the Instagram posts. It is important to leave room for creativity as long as their is a cohesive
+                identity.</p>
 
         </section>
     </main>
