--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-N86RSZZ');</script>
+    <!-- End Google Tag Manager -->
     <base href="/">
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./utilities.css">
     <link rel="icon" href="./Assets/Images/gaurav-logo.svg" type="image/x-icon">
     <head-context></head-context>
-    
+
     <!-- Optional CSS and JS -->
     <link rel="stylesheet" href="index.css">
     <script src="./index.js" defer></script>
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N86RSZZ" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <nav-bar></nav-bar>
     <main>
