--- a/Work/InvestMint/InvestMint.html
+++ b/Work/InvestMint/InvestMint.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-N86RSZZ');</script>
-<!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB66SYNV21"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JB66SYNV21');
+    </script>
     <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/utilities.css">
     <link rel="icon" href="/Assets/Images/gaurav-logo.svg" type="image/x-icon">
@@ -19,10 +21,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N86RSZZ"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     <!-- Customize Path -->
     <nav-bar></nav-bar>
     <header>
@@ -42,12 +40,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 constructing robust portfolios through qualitative and quantitative methods. Yet, I've observed a
                 puzzling trend among my college friends who, despite their interest in personal finance, shy away from
                 investing. This has piqued my curiosity and led me to wonder, <b>"What is the reason behind the
-                disconnect between young people and investing?”</b></p>
+                    disconnect between young people and investing?”</b></p>
             <p> During the Young Tycoons Business Competition, where I led as the CEO and managed UX and Marketing for
                 our team, we tackled this very issue. As students of Indian descent, our focus was on the Indian market,
                 evident through the presence of <b>₹</b> symbols and Indian news headlines throughout our project.</p>
             <h3>Process</h3>
-            <p>While I stuck to the overarching principles of the double diamond process, I tailored and adapted my approach to align with the specific business requirements and time constraints of the competition.</p>
+            <p>While I stuck to the overarching principles of the double diamond process, I tailored and adapted my
+                approach to align with the specific business requirements and time constraints of the competition.</p>
             <!-- <h3>//ADD PROCESS DIAGRAM</h3> -->
 
             <h2>Problem Validation</h2>
@@ -188,28 +187,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <h2>Assessing the Solution</h2>
             <h3>Addressing the HMW Statements</h3>
-            <p>At this stage, we thought it would be best to look back at out HMW statements and see if our solution was able to achieve the goals we set out to accomplish. </p>
-
-            
-            <p class="first"><b><input type="checkbox" checked>How might we practically educate users about investing concepts?</b></p>
-            <p class="no-top-margin">We drew inspiration from the Google Primer app and implemented 5-minute lessons to teach investing concepts in smaller, easily digestible chunks. Busy users like our persona, Sita, can learn at their own pace. Your progress is saved and you can also choose from various levels based on your existing knowledge level.</p>
-            
-            <p class="first"><b><input type="checkbox" checked>How might we encourage gradual savings in an investment account?</b></p>
-            <p class="no-top-margin">By linking investing to a part of our users routine life, we can make investing a habit easily. In addition to this, we also gave them the option to add funds directly from their bank accounts to make additional investments once they felt comfortable. </p>
-            <p class="first"><b><input type="checkbox" checked>How might we boost user confidence in investing decisions?</b></p>
-            <p class="no-top-margin">In the beginning, we don’t expect our users to save a lot. The small amount saved can be invested gradually as they learn more. This exposure should build up confidence.</p>
-            <p>By displaying minimal information and graphs in favour of more average long term statistics, we can also prevent anxiety while making the decision. Once they complete certain modules, we can encourage them to perform research beyond the app to figure out which stocks and ETFs might be a good fit for them.</p>
-            <p>In the future, we also need to consider effective copy to inspire confidence and eliminate panic during poor economic conditions.</p>
-            <p class="first"><b><input type="checkbox" checked>How might we make the investing process quick and intuitive?</b></p>
-            <p class="no-top-margin">While our original idea was to provide stock recommendations, we soon decided against it to prevent liability. A portfolio should be chosen based on personal goals, risk tolerance and other factors, not because of a recommendation.</p>
-            <p>Thus, we settled on creating a simple user flow and testing it to ensure that it met the design goals. We feel that making the process any more quick or intuitive may cross ethical boundaries. </p>
+            <p>At this stage, we thought it would be best to look back at out HMW statements and see if our solution was
+                able to achieve the goals we set out to accomplish. </p>
 
 
-                <h3>Scalability Analysis</h3>
-                <p>While developing a good product was a priority, we also had to make sure that we could build a scalable business as well. Therefore performing a market analysis at this stage was necessary.</p>
+            <p class="first"><b><input type="checkbox" checked>How might we practically educate users about investing
+                    concepts?</b></p>
+            <p class="no-top-margin">We drew inspiration from the Google Primer app and implemented 5-minute lessons to
+                teach investing concepts in smaller, easily digestible chunks. Busy users like our persona, Sita, can
+                learn at their own pace. Your progress is saved and you can also choose from various levels based on
+                your existing knowledge level.</p>
 
-                <img src="9.png" alt="TAM-SAM-SOM Analysis in Rupees (₹) - the Indian currency">
-                <p>Our analysis shows that our product could have great potential for revenue and encouraged us to continue building it as previously envisioned.</p>
+            <p class="first"><b><input type="checkbox" checked>How might we encourage gradual savings in an investment
+                    account?</b></p>
+            <p class="no-top-margin">By linking investing to a part of our users routine life, we can make investing a
+                habit easily. In addition to this, we also gave them the option to add funds directly from their bank
+                accounts to make additional investments once they felt comfortable. </p>
+            <p class="first"><b><input type="checkbox" checked>How might we boost user confidence in investing
+                    decisions?</b></p>
+            <p class="no-top-margin">In the beginning, we don’t expect our users to save a lot. The small amount saved
+                can be invested gradually as they learn more. This exposure should build up confidence.</p>
+            <p>By displaying minimal information and graphs in favour of more average long term statistics, we can also
+                prevent anxiety while making the decision. Once they complete certain modules, we can encourage them to
+                perform research beyond the app to figure out which stocks and ETFs might be a good fit for them.</p>
+            <p>In the future, we also need to consider effective copy to inspire confidence and eliminate panic during
+                poor economic conditions.</p>
+            <p class="first"><b><input type="checkbox" checked>How might we make the investing process quick and
+                    intuitive?</b></p>
+            <p class="no-top-margin">While our original idea was to provide stock recommendations, we soon decided
+                against it to prevent liability. A portfolio should be chosen based on personal goals, risk tolerance
+                and other factors, not because of a recommendation.</p>
+            <p>Thus, we settled on creating a simple user flow and testing it to ensure that it met the design goals. We
+                feel that making the process any more quick or intuitive may cross ethical boundaries. </p>
+
+
+            <h3>Scalability Analysis</h3>
+            <p>While developing a good product was a priority, we also had to make sure that we could build a scalable
+                business as well. Therefore performing a market analysis at this stage was necessary.</p>
+
+            <img src="9.png" alt="TAM-SAM-SOM Analysis in Rupees (₹) - the Indian currency">
+            <p>Our analysis shows that our product could have great potential for revenue and encouraged us to continue
+                building it as previously envisioned.</p>
 
 
 
