--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-N86RSZZ');</script>
-    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB66SYNV21"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JB66SYNV21');
+    </script>
     <base href="/">
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./utilities.css">
@@ -151,14 +150,14 @@
                     <li>Considerate</li>
                     <li>Adaptive</li>
                 </ul>
-                <ul class="list-inline">
+                <ul class="list-inline" aria-hidden="true">
                     <li>Minimalistic</li>
                     <li>Elegant</li>
                     <li>Intuitive</li>
                     <li>Considerate</li>
                     <li>Adaptive</li>
                 </ul>
-                <ul class="list-inline">
+                <ul class="list-inline" aria-hidden="true">
                     <li>Minimalistic</li>
                     <li>Elegant</li>
                     <li>Intuitive</li>
