Blog Posts and stuff

--- a/Work/InvestMint/InvestMint.html
+++ b/Work/InvestMint/InvestMint.html
@@ -2,20 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB66SYNV21"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
 
-        gtag('config', 'G-JB66SYNV21');
-    </script>
     <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/utilities.css">
     <link rel="icon" href="/Assets/Images/gaurav-logo.svg" type="image/x-icon">
-    <head-context></head-context>
-
+    
+    
+    <title>Case Study - InvestMint</title>
     <link rel="stylesheet" href="/work.css">
     <script src="/work.js" defer></script>
 </head>
