--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB66SYNV21"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-JB66SYNV21');
-    </script>
     <base href="/">
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./utilities.css">
     <link rel="icon" href="./Assets/Images/gaurav-logo.svg" type="image/x-icon">
-    <head-context></head-context>
+
+    <title>Gaurav Shah's Portfolio</title>
 
     <!-- Optional CSS and JS -->
     <link rel="stylesheet" href="index.css">
@@ -44,12 +36,12 @@
                         Talk <span class="material-symbols-outlined">arrow_forward</span></button>
                 </div>
             </div>
-            <img src="./Assets/Images/Me/Hero Image.png" alt="Gaurav Shah's Profile Image">
+            <img src="./Assets/Images/Me/Hero Image.svg" alt="Gaurav Shah's Profile Image">
         </section>
 
         <!-- Featured Work Section -->
         <section class="works" id="works">
-            <a class="work" href="./Work/InvestMint/InvestMint.html">
+            <a class="work" href="./Work/InvestMint/InvestMint.html" class="slow-scroll">
                 <div id="work1">
                     <img src="./Assets/Images/Work/Investmint.gif" alt="Investmint Mockup Gif" id="investmint-gif"
                         class="loading-bg">
@@ -71,7 +63,7 @@
                 </div>
             </a>
 
-            <a class="work" href="./Work/UWMA/UWMA.html">
+            <a class="work" href="./Work/UWMA/UWMA.html" class="slow-scroll">
                 <img src="./Assets/Images/Work/UWMA.png" alt="UW Marketing Association Branding Image" id="work2"
                     class="work-image">
                 <div class="work-content" id="work2-content">
@@ -96,7 +88,7 @@
             <h2>What sets me apart?</h2>
             <h1 class="watermark" id="apart-watermark" style="left: 0;">What sets me apart?</h1>
             <div class="apart-content">
-                <div class="apart-block">
+                <div class="apart-block slow-scroll">
                     <div class="number">1</div>
                     <h3>Coding and Design</h3>
                     <b>Bridging the gap between designers and developers
@@ -107,7 +99,7 @@
                         life.
                     </p>
                 </div>
-                <div class="apart-block">
+                <div class="apart-block slow-scroll">
                     <div class="number">2</div>
                     <h3>Business Know How</h3>
                     <b>Designing products with a strategic mindset
@@ -117,7 +109,7 @@
                         a strategic perspective on designing profitable products that consider a company's financial
                         situation.</p>
                 </div>
-                <div class="apart-block">
+                <div class="apart-block slow-scroll">
                     <div class="number">3</div>
                     <h3>User Psychology</h3>
                     <b>Designing for desired user behaviours
@@ -128,7 +120,7 @@
                         desired
                         user behavior and increase user engagement and satisfaction.</p>
                 </div>
-                <div class="apart-block">
+                <div class="apart-block slow-scroll">
                     <div class="number">4</div>
                     <h3>Marketing Insights</h3>
                     <b>Designing products for success
