--- a/template.html
+++ b/template.html
@@ -2,19 +2,12 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB66SYNV21"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
 
-        gtag('config', 'G-JB66SYNV21');
-    </script>
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./utilities.css">
     <link rel="icon" href="./Assets/Images/gaurav-logo.svg" type="image/x-icon">
-    <head-context></head-context>
+    
+    <title>Gaurav Shah's Portfolio</title>
 </head>
 
 <body>
