--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li>Market Research</li>
                         <li>Figma Prototyping</li>
                     </ul>
-                    <h2>InvestMint</h2>
+                    <h2>Invest&shy;Mint</h2>
                     <p>Elevate your finances with ease. Our investment browser extension empowers you to effortlessly
                         invest
                         a portion of your e-commerce spending, opening doors to a brighter financial future.</p>
@@ -72,7 +72,7 @@
                         <li>Identity Design</li>
                         <li>Graphic Design</li>
                     </ul>
-                    <h2>UW Marketing</h2>
+                    <h2>UW &shy;Marketing</h2>
                     <p>Revitalizing the University of Waterloo's Marketing Association. Our fresh new identity is
                         reaching
                         new audiences and educating the community about the power of marketing.</p>
@@ -172,11 +172,10 @@
                             <p>UWMA Club President</p>
                         </div>
                     </div>
-                    <p>Gaurav is an invaluable member of UW Marketing Association, transforming the club's image with
-                        new
-                        brand guidelines and themes. His work enhances social media, programs, and events, showcasing
-                        his
-                        creativity and dedicated work ethic.
+                    <p>Gaurav is an integral member of UW Marketing Association, transforming the club's image with new
+                        brand guidelines. His work has contributed to the success of the club's social media pages,
+                        programs and events. His creativity and determined work ethic make him a treasured member of the
+                        team.
                     </p>
                 </div>
                 <div class="card">
@@ -201,7 +200,9 @@
                             <p>Coordinator at United for Literacy</p>
                         </div>
                     </div>
-                    <p>(Awaiting Response)
+                    <p>Gaurav has been a welcome addition to our United for Literacy Waterloo Organizational Team. As a
+                        volunteer program leader with our Number Ninjas elementary mathematics program, he has brought a
+                        great deal of energy, enthusiasm and thoughtfulness to this position.
                     </p>
                 </div>
             </div>
