--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <section class="testimonials container no-padding-top">
             <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay fade">
             <!-- <h1 class="watermark">Testimonials</h1> -->
-            <h2>Testimonials</h2>
+            <h2>Testimon&shy;ials</h2>
             <div class="cards">
                 <div class="card">
                     <div class="profile">
