--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
         </section>
 
         <!-- Other Work -->
-        <!-- <section class="other-work container">
+        <section class="other-work container">
             <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay fade">
             <h2>Other Work</h2>
             <div class="cards">
-                <div class="card work">
+                <a class="card work" href="/Work/MunchMap/munchmap.html">
                     <img src="./Assets/Images/Work/MunchMap.png" alt="Munch Map">
                     <div class="card-content">
                         <ul class="tags">
@@ -248,8 +248,8 @@
                         <h4>Munch Map</h4>
                         <p>Connecting food with those in need</p>
                     </div>
-                </div>
-                <div class="card work">
+                </a>
+                <a class="card work" href="/Work/Oops/oops.html">
                     <img src="./Assets/Images/Work/Study Bunny.png" alt="Study Bunny">
                     <div class="card-content">
                         <ul class="tags">
@@ -259,8 +259,8 @@
                         <h4>Study Bunny</h4>
                         <p>All-in-one remote learning platform</p>
                     </div>
-                </div>
-                <div class="card work">
+                </a>
+                <a class="card work" href="/Work/Oops/oops.html">
                     <img src="./Assets/Images/Work/TTP.png" alt="The Teen Pop">
                     <div class="card-content">
                         <ul class="tags">
@@ -270,9 +270,9 @@
                         <h4>The Teen Pop</h4>
                         <p>India's first online teen magazine</p>
                     </div>
-                </div>
+                </a>
             </div>
-        </section> -->
+        </section>
     </main>
 
     <footer-content></footer-content>
