--- a/Work/MunchMap/munchmap.html
+++ b/Work/MunchMap/munchmap.html
@@ -40,9 +40,9 @@
                 bothered me to see all that food going to waste when there are so many people who could benefit from it.
                 Inspired by this and the number of other club events I had been to with extra food, I had an idea.</p>
             <h2>The Solution</h2>
-            <button class="figma-button"><img src="../../Assets/Images/figma-icon.svg"> View in Figma <span class="material-symbols-outlined">
+            <a class="figma-button" href="https://www.figma.com/file/YCDzyGojRtPDnvAxgZFhGW/TILE-Hackathon?type=design&node-id=0%3A1&t=RVScsEA09OXCxgyh-1"><img src="../../Assets/Images/figma-icon.svg"> View in Figma <span class="material-symbols-outlined">
                 north_east
-                </span></button>
+                </span></a>
             <p>Introducing MunchMap, the solution I designed to tackle food waste on college campuses. There are 3 main
                 user flows I'd like to demonstrate.</p>
             <h3>User Flow 1 - If you have extra food</h3>
