--- a/Work/MunchMap/munchmap.html
+++ b/Work/MunchMap/munchmap.html
@@ -71,7 +71,7 @@
                 <img src="user-flow-3.svg" alt="User Flow 3 - Gamification through Munch Coins">
 
 
-            <h2>Hindsight</h2>
+            <h2>Reflection</h2>
             <p>Upon reflection, I recognize that my initial design for the MunchMap app during the design-a-thon
                 primarily focused on the happy path, overlooking potential challenges that may arise during its actual
                 implementation. Here are some issues that need to be addressed for the app's large-scale adoption and
