--- a/Work/UWMA/UWMA.html
+++ b/Work/UWMA/UWMA.html
@@ -45,7 +45,7 @@
                     focused club on campus, we are the hub for all students with an interest in marketing, and trust us,
                     there’s a lot of students who fit that description.
                 </p>
-                <div class="image-container">
+                <div class="image-container half-width">
                     <img src="1.png" alt="Old Logo">
                 </div>
             </div>
