--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                         <li>Product Development</li>
                         <li>UX Research</li>
                         <li>Market Research</li>
-                        <li>Figma Prototyping</li>
                     </ul>
                     <h2>Invest&shy;Mint</h2>
                     <p>Elevate your finances with ease. Our investment browser extension empowers you to effortlessly
@@ -60,6 +59,7 @@
                         a portion of your e-commerce spending, opening doors to a brighter financial future.</p>
                     <button class="button-flex">Read Case Study <span
                             class="material-symbols-outlined">arrow_forward</span></button>
+                    <button class="play-audio" id="investmint-audio" aria-label="Play Audio"><img src="/Assets/Images/play.svg"></button>
                 </div>
             </a>
 
@@ -78,6 +78,7 @@
                         new audiences and educating the community about the power of marketing.</p>
                     <button class="button-flex">Read Case Study <span
                             class="material-symbols-outlined">arrow_forward</span></button>
+                    <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img src="/Assets/Images/play.svg"></button>
                 </div>
             </a>
         </section>
@@ -249,7 +250,7 @@
                         <p>Connecting food with those in need</p>
                     </div>
                 </a>
-                <a class="card work" href="/Work/Oops/oops.html">
+                <a class="card work disabled" href="/Work/Oops/oops.html">
                     <img src="./Assets/Images/Work/Study Bunny.png" alt="Study Bunny">
                     <div class="card-content">
                         <ul class="tags">
@@ -260,7 +261,7 @@
                         <p>All-in-one remote learning platform</p>
                     </div>
                 </a>
-                <a class="card work" href="/Work/Oops/oops.html">
+                <a class="card work disabled" href="/Work/Oops/oops.html">
                     <img src="./Assets/Images/Work/TTP.png" alt="The Teen Pop">
                     <div class="card-content">
                         <ul class="tags">
